--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -6,13 +6,13 @@
         <main class="centered">
             <h1><%= product.title %></h1>
             <hr>
-            <div>
+            <div> 
                 <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post">
-                <button class="btn" type="submit">Add to Cart</button>
-            </form>
+
+            <%- include('../includes/add-to-cart.ejs') %>
+            
         </main>
         <%- include('../includes/end.ejs') %>
