--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -28,9 +28,7 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product.id %>" class="btn"> Details</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
-                                    </form>
+                                    <%- include('../includes/add-to-cart.ejs' ,{product :product}) %>   //here  {product :product}  this include is in for loop so we have to pass the second param as object 
                                 </div>
                             </article>
                             <% } %>
